--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@prisma/client": "^5.15.0",
     "@reduxjs/toolkit": "^2.2.6",
     "next": "14.2.4",
