--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,16 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "node16",
+    "moduleResolution": "node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
+     "target": "esnext",
+    "jsx": "react-jsx",
+    "types": ["@testing-library/jest-dom"],
+    "declaration": true,
+
     "plugins": [
       {
         "name": "next"
@@ -21,6 +25,9 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "./vitest.setup.ts"],
   "exclude": ["node_modules"]
 }
