--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://myuser:admin@localhost:5432/mydatabase"
+REACT_APP_API_BASE_URL = "http://localhost:3000"
