--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@prisma/client": "^5.15.0",
     "@reduxjs/toolkit": "^2.2.6",
     "jest-mock-extended": "^3.0.7",
-    "next": "14.2.4",
+    "next": "^14.2.20",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.8",
@@ -34,6 +35,7 @@
     "@types/node": "^20.14.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "@types/redux-mock-store": "^1.0.6",
     "@types/testing-library__react": "^10.2.0",
     "@vitest/ui": "latest",
     "babel-jest": "^29.7.0",
@@ -49,7 +51,7 @@
     "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
-    "vite": "latest",
+    "vite": "^6.0.3",
     "vitest": "latest"
   },
   "stackblitz": {
